--- a/kiwi_cook_server/docker-compose.yml
+++ b/kiwi_cook_server/docker-compose.yml
@@ -1,11 +1,67 @@
 services:
   redis:
     image: redis:alpine
-    ports:
-      - "6379:6379"
     networks:
-      - kiwi-cook-network
+      - redis_network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '256M'
+        reservations:
+          memory: '128M'
+
+  fusionauth:
+    image: fusionauth/fusionauth-app
+    networks:
+      - fusionauth_network
+    environment:
+      - DATABASE_URL=jdbc:postgresql://fusionauth-db:5432/fusionauth
+      - DATABASE_USERNAME=fusionauth
+      - DATABASE_PASSWORD_FILE=/run/secrets/db_password
+    secrets:
+      - db_password
+    depends_on:
+      - fusionauth-db
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: '1G'
+        reservations:
+          memory: '512M'
+
+  fusionauth-db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: fusionauth
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      POSTGRES_DB: fusionauth
+    volumes:
+      - fusionauth_db_data:/var/lib/postgresql/data
+    secrets:
+      - db_password
+    networks:
+      - fusionauth_network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: '1G'
+        reservations:
+          memory: '512M'
 
 networks:
-  kiwi-cook-network:
+  fusionauth_network:
     driver: bridge
+  redis_network:
+    driver: bridge
+
+volumes:
+  fusionauth_db_data:
+
+secrets:
+  env_file:
+    file: .env
+  db_password:
+    file: .fusionauth_dbpassword
