--- a/kiwi_cook_server/docker-compose.yml
+++ b/kiwi_cook_server/docker-compose.yml
@@ -1,35 +1,34 @@
 services:
   redis:
     image: redis:alpine
+    # TODO
+    # command: redis-server --requirepass ${REDIS_PASSWORD}
     networks:
       - redis_net
-    ports:
-      - "6379:6379"
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: '256M'
+          cpus: "0.5"
+          memory: "256M"
         reservations:
-          memory: '128M'
+          memory: "128M"
 
   db:
     image: postgres:16.0-bookworm
-    env_file:
-      - ./db.env
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s   # Increased interval
-      timeout: 10s    # Increased timeout
-      retries: 10     # Increased retries
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - db_net
     restart: unless-stopped
     volumes:
       - db_data:/var/lib/postgresql/data
-
 
   search:
     image: opensearchproject/opensearch:2.11.0
@@ -39,8 +38,7 @@ services:
       node.name: search
       plugins.security.disabled: true
       bootstrap.memory_lock: true
-    env_file:
-      - search.env
+      OPENSEARCH_JAVA_OPTS: ${OPENSEARCH_JAVA_OPTS}
     healthcheck:
       interval: 10s
       retries: 80
@@ -70,18 +68,21 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: jdbc:postgresql://db:5432/fusionauth
-      FUSIONAUTH_APP_URL: http://fusionauth:9011
+      DATABASE_ROOT_USERNAME: ${POSTGRES_USER}
+      DATABASE_ROOT_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
+      FUSIONAUTH_APP_RUNTIME_MODE: ${FUSIONAUTH_APP_RUNTIME_MODE}
       SEARCH_SERVERS: http://search:9200
       SEARCH_TYPE: elasticsearch
-    env_file:
-      - fusion.env
-      - db.env
     healthcheck:
       test: curl --silent --fail http://localhost:9011/api/status -o /dev/null -w "%{http_code}"
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
+      - fusionauth_net
       - db_net
       - search_net
     restart: unless-stopped
@@ -91,7 +92,11 @@ services:
       - fusionauth_config:/usr/local/fusionauth/config
 
 networks:
+  app_net:
+    driver: bridge
   redis_net:
+    driver: bridge
+  fusionauth_net:
     driver: bridge
   db_net:
     driver: bridge
