Upgrade quasar and dependencies

--- a/kiwi_cook/package.json
+++ b/kiwi_cook/package.json
@@ -3,58 +3,66 @@
   "version": "0.0.1",
   "description": "Kiwi Cook is your personal recipe book",
   "productName": "Kiwi Cook",
-  "author": "am9zZWY <46693545+am9zZWY@users.noreply.github.com>",
+  "author": "Josef <46693545+am9zZWY@users.noreply.github.com>",
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint src",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "icon-genie": "icongenie generate -m pwa -i ./src/assets/kiwi-cook-logo.png -o ./public/icons",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build",
+    "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.13",
+    "@quasar/extras": "^1.16.14",
     "@quasar/icongenie": "^4.0.0",
     "@telemetrydeck/sdk": "^2.0.4",
     "@xenova/transformers": "^2.17.2",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "eslint-config-airbnb-base": "^15.0.0",
     "fuse.js": "^7.0.0",
-    "pinia": "^2.2.6",
+    "globals": "^15.13.0",
+    "pinia": "^2.2.8",
     "quasar": "^2.17.4",
     "register-service-worker": "^1.7.2",
     "sharp": "^0.33.5",
     "stemmer": "^2.0.1",
+    "typescript-eslint": "^8.16.0",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
-    "vue-router": "^4.4.5",
+    "vue-router": "^4.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^6.0.0",
-    "@quasar/app-vite": "^2.0.0-beta.24",
-    "@types/node": "^22.9.1",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@quasar/app-vite": "^2.0.0-rc.4",
+    "@types/node": "^20.17.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "typescript": "~5.7.2",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "prettier": "^3.4.1",
+    "typescript": "~5.5.4",
     "vite-plugin-checker": "^0.8.0",
     "vue-tsc": "^2.1.10",
-    "workbox-build": "^7.3.0",
-    "workbox-cacheable-response": "^7.3.0",
-    "workbox-core": "^7.3.0",
-    "workbox-expiration": "^7.3.0",
-    "workbox-precaching": "^7.3.0",
-    "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-build": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
-  }
+  },
+  "trustedDependencies": [
+    "protobufjs"
+  ]
 }
