--- a/kiwi_cook/src-pwa/tsconfig.json
+++ b/kiwi_cook/src-pwa/tsconfig.json
@@ -1,13 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "lib": [
-      "WebWorker",
-      "ESNext"
-    ]
+    "lib": ["WebWorker", "ESNext"]
   },
-  "include": [
-    "*.ts",
-    "*.d.ts"
-  ]
+  "include": ["*.ts", "*.d.ts"]
 }
