--- a/kiwi_cook/src-pwa/manifest.json
+++ b/kiwi_cook/src-pwa/manifest.json
@@ -1,7 +1,10 @@
 {
+  "name": "KiwiCook",
+  "short_name": "KiwiCook",
+  "description": "KiwiCook: Your friendly personal cooking assistant!",
   "orientation": "portrait",
-  "background_color": "#ffffff",
-  "theme_color": "#027be3",
+  "background_color": "#4CAF50",
+  "theme_color": "#7cb342",
   "icons": [
     {
       "src": "icons/icon-128x128.png",
@@ -28,5 +31,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone"
 }
