--- a/kiwi_cook/package.json
+++ b/kiwi_cook/package.json
@@ -21,6 +21,7 @@
     "@telemetrydeck/sdk": "^2.0.4",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.8",
+    "dompurify": "^3.2.2",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-prettier": "^5.2.1",
     "fuse.js": "^7.0.0",
