--- a/kiwi_cook_server/pyproject.toml
+++ b/kiwi_cook_server/pyproject.toml
@@ -33,6 +33,12 @@ fastapi-limiter = "^0.1.6"
 redis = "^5.2.0"
 passlib = "^1.7.4"
 fusionauth-client = "^1.53.0"
+transformers = "^4.46.3"
+torch = "^2.5.1"
+opentelemetry-api = "^1.28.2"
+opentelemetry-sdk = "^1.28.2"
+opentelemetry-exporter-otlp = "^1.28.2"
+opentelemetry-instrumentation-fastapi = "^0.49b2"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.2"
