--- a/kiwi_cook_server/pyproject.toml
+++ b/kiwi_cook_server/pyproject.toml
@@ -29,11 +29,11 @@ rapidfuzz = "^3.10.1"
 pytest = "^8.3.3"
 redis = "^5.2.0"
 passlib = "^1.7.4"
-fusionauth-client = "^1.53.0"
 opentelemetry-api = "^1.28.2"
 opentelemetry-sdk = "^1.28.2"
 opentelemetry-exporter-otlp = "^1.28.2"
 opentelemetry-instrumentation-fastapi = "^0.49b2"
+pillow = "^11.0.0"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.2"
